--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,390 @@
-.App {
+body {
+  width: 100%;
+  margin: 0 auto;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav {
+  z-index: 10001;
+}
+.navbar {
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #9fcfb1;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 1em;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+nav ul li a:hover {
+  color: black;
+}
+
+.logo img {
+  width: 100px;
+  height: auto;
+  padding-left: 20px;
+}
+.menu-icon {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 5px 0;
+}
+
+.nav-links.visible {
+  display: flex;
+  flex-direction: column;
+  transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block;
+  }
+
+  .nav-links {
+    position: static;
+    display: none;
+    width: 100%;
+    background-color: #9fcfb1;
+    padding: 0;
+  }
+  .nav-links.visible {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+}
+/*Nav.  */
+
+.header {
+  background-color: #495e57;
+  color: #edefee;
+  padding: 10px 13%;
+  position: relative;
+  font-family: Markazi;
+}
+
+/* h2 {
+  color: #f4ce14;
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+.banner p {
+  font-size: 20px;
+  max-width: 520px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+button {
+  background-color: #f4ce14;
+  color: black;
+  padding: 14px 18px;
+  border: none;
+  text-decoration: none;
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+banner-img {
+  position: absolute;
+  right: 13%;
+  top: 15%;
+  width: 400px;
+}
+
+.banner-img img {
+  width: 100%;
+  height: 400px;
+  border-radius: 20px;
+} */
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.column {
+  flex: 0 0 48%;
+}
+
+.banner {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.banner h2 {
+  font-size: 2.5rem;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: #f4ce14;
+  font-size: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.banner h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.banner p {
+  margin-bottom: 20px;
+  font-size: 1rem;
+  max-width: 520px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+.btn_reserve {
+  background-color: #f4ce14;
+  color: black;
+  padding: 10px 15px;
+  border: none;
+  text-decoration: none;
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: 400;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.banner img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+}
+
+/* Header */
+form,
+.comfirm {
+  padding: 10px 13%;
+}
+
+.formfield {
+  padding: 50px 20px;
+}
+
+input,
+label {
+  display: inline-block;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+#book-date,
+#book-time,
+#book-guests,
+#book-occasion {
+  background-color: #bdbdbd43;
+  padding: 8px 24px;
+  border: none;
+  outline: none;
+  border-radius: 2px;
+}
+
+.btnReceive input {
+  padding: 12px 16px;
+  margin-left: 20px;
+  background-color: #495e57;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+}
+
+.comfirm span {
+  color: blue;
+}
+
+/*  */
+
+.cards {
+  margin-top: 30px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem 1rem;
+}
+
+.menu-items {
+  width: 350px;
+  background: #a9c8be;
+  border-radius: 8px;
+}
+.menu-container img {
+  width: 100%;
+  height: 233px;
+  border-radius: 8px;
+}
+
+.menu-container {
+  font-family: Markazi;
+  margin: auto;
+  padding: 20px 13%;
+}
+
+.menu-container h2 {
+  color: #000;
+}
+
+.menu-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.menu-header button {
+  background-color: #495e57;
+  color: #edefff;
+  font-size: 16px;
+  border-radius: 10px;
+  border-style: none;
+  padding: 5px 12px;
+}
+
+.menu-content {
+  padding: 5px 15px;
+}
+
+.menu-content .heading {
+  display: flex;
+  justify-content: space-between;
+}
+
+.orderBtn {
+  background-color: #f4ce14;
+  color: #333333;
+  padding: 5px 20px;
+  margin-bottom: 20px;
+  font-size: small;
+  font-weight: 600;
+  border-style: none;
+  border-radius: 20px;
+}
+
+/*  */
+
+.review-container {
+  background-color: #f4ce14;
+  padding-bottom: 30px;
+  justify-content: space-evenly;
+  padding-block-start: 20px;
+  padding-inline-start: 50px;
+  padding-inline-end: 50px;
+  font-family: Markazi;
+}
+
+.review-customer {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  gap: 2rem 1rem;
+  background-color: #495e57;
+  border-radius: 10px;
+  width: 200px;
+}
+.aboutSection {
+  background-color: #9fcfb1;
+  font-family: Karla;
+  color: #edefff;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  /* padding-right: 10px; */
+}
+.chefs {
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+/* footer section {
+  padding: 10px 13%;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+} */
+
+/* .company-info img {
+  display: ;
+} */
+
+.footerRow {
+  padding-top: 50px;
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: start;
+  font-family: Karla;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.footer-logo {
+  padding-top: 30px;
+  padding-left: 30px;
+}
+
+.footerNav {
+  font-size: small;
+}
+
+.footerText {
+  font-family: Karla;
+  font-weight: 600;
+  font-size: medium;
+}
+
+.footerText-contact {
+  padding-left: 20px;
+  font-weight: 600;
+  font-size: medium;
+}
+
+@media (max-width: 768px) {
+  .footerRow {
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
   }
 }
