--- a/src/App.css
+++ b/src/App.css
@@ -86,47 +86,6 @@ nav ul li a:hover {
   font-family: Markazi;
 }
 
-/* h2 {
-  color: #f4ce14;
-  font-size: 40px;
-}
-
-h3 {
-  font-size: 25px;
-}
-
-.banner p {
-  font-size: 20px;
-  max-width: 520px;
-  line-height: 1.5;
-  margin-bottom: 30px;
-}
-
-button {
-  background-color: #f4ce14;
-  color: black;
-  padding: 14px 18px;
-  border: none;
-  text-decoration: none;
-  border-radius: 12px;
-  font-size: 20px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-banner-img {
-  position: absolute;
-  right: 13%;
-  top: 15%;
-  width: 400px;
-}
-
-.banner-img img {
-  width: 100%;
-  height: 400px;
-  border-radius: 20px;
-} */
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -191,6 +150,7 @@ banner-img {
 }
 
 /* Header */
+
 form,
 .comfirm {
   padding: 10px 13%;
@@ -309,6 +269,12 @@ label {
   padding-inline-end: 50px;
   font-family: Markazi;
 }
+.review-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 20px;
+}
 
 .review-customer {
   margin-top: 30px;
@@ -317,11 +283,11 @@ label {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  flex-wrap: wrap;
-  gap: 2rem 1rem;
+  gap: 2rem;
   background-color: #495e57;
   border-radius: 10px;
   width: 200px;
+  padding-top: 10px;
 }
 .aboutSection {
   background-color: #9fcfb1;
@@ -331,22 +297,10 @@ label {
   justify-content: center;
   padding-top: 30px;
   padding-bottom: 20px;
-  /* padding-right: 10px; */
 }
 .chefs {
   position: relative;
 }
-
-/* footer section {
-  padding: 10px 13%;
-  display: flex;
-  justify-content: space-between;
-  align-items: start;
-} */
-
-/* .company-info img {
-  display: ;
-} */
 
 .footerRow {
   padding-top: 50px;
