--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -67,12 +67,12 @@ nav ul li a:hover {
     position: static;
     display: none;
     width: 100%;
-    background-color: #9fcfb1; /* Change the background color for mobile */
-    padding: 0; /* Reset padding for mobile */
+    background-color: #9fcfb1;
+    padding: 0;
   }
   .nav-links.visible {
     display: flex;
     flex-direction: column;
-    padding: 10px; /* Add padding for mobile */
+    padding: 10px;
   }
 }
