--- a/src/App.css
+++ b/src/App.css
@@ -164,7 +164,8 @@ input,
 label {
   display: inline-block;
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
 
 #book-date,
@@ -179,8 +180,8 @@ label {
 }
 
 .btnReceive input {
-  padding: 12px 16px;
-  margin-left: 20px;
+  padding: 5px 15px;
+  margin-top: 20px;
   background-color: #495e57;
   color: #fff;
   border: none;
