--- a/src/App.css
+++ b/src/App.css
@@ -179,7 +179,7 @@ label {
   border-radius: 2px;
 }
 
-.btnReceive input {
+.btnReceive {
   padding: 5px 15px;
   margin-top: 20px;
   background-color: #495e57;
@@ -188,8 +188,11 @@ label {
   border-radius: 4px;
 }
 
-.comfirm span {
-  color: blue;
+.confirm h1 {
+  color: #495e57;
+  font-weight: bold;
+  font-family: Markazi;
+  padding: 20px 20px;
 }
 
 /*  */
