--- a/src/App.css
+++ b/src/App.css
@@ -166,17 +166,20 @@ label {
   margin-right: 20px;
   margin-top: 20px;
   margin-bottom: 5px;
+  font-family: Markazi;
 }
 
 #book-date,
 #book-time,
 #book-guests,
 #book-occasion {
-  background-color: #bdbdbd43;
-  padding: 8px 24px;
+  /* background-color: #bdbdbd2f; */
+  padding: 5px 10px;
   border: none;
-  outline: none;
+  outline: auto;
   border-radius: 2px;
+  font-family: Markazi;
+  font-size: small;
 }
 
 .btnReceive {
@@ -189,7 +192,7 @@ label {
 }
 
 .confirm h1 {
-  color: #495e57;
+  color: green;
   font-weight: bold;
   font-family: Markazi;
   padding: 20px 20px;
@@ -296,7 +299,7 @@ label {
 .aboutSection {
   background-color: #9fcfb1;
   font-family: Karla;
-  color: #edefff;
+  color: #ffffff;
   align-items: center;
   justify-content: center;
   padding-top: 30px;
