--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,9 @@ a {
   text-decoration: none;
 }
 
-nav {
-  z-index: 10001;
-}
 .navbar {
+  position: fixed;
+  z-index: 10001;
   padding: 5px;
   display: flex;
   justify-content: space-between;
