--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ a {
   z-index: 10001;
   padding: 5px;
   display: flex;
+  top: 0;
+  left: 0;
   justify-content: space-between;
   align-items: center;
   background-color: #9fcfb1;
@@ -23,7 +25,7 @@ a {
 
 nav ul li {
   display: inline-block;
-  padding: 1em;
+  padding: 1rem;
 }
 
 nav ul li a {
@@ -60,19 +62,21 @@ nav ul li a:hover {
 @media (max-width: 768px) {
   .menu-icon {
     display: block;
+    padding-right: 20px;
   }
 
   .nav-links {
-    position: static;
+    /* position: static; */
     display: none;
     width: 100%;
-    background-color: #9fcfb1;
+    /* background-color: #9fcfb1; */
     padding: 0;
   }
+
   .nav-links.visible {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 0 0;
   }
 }
 /*Nav.  */
